fix(table): sort header style with align right (#21)

--- a/src/components/Table/index.less
+++ b/src/components/Table/index.less
@@ -21,6 +21,9 @@
 			padding: @ts-unit-half;
 			text-align: left;
 			font-weight: @ts-fontweight-semibold;
+			&.ts-rc-table-sort-cell {
+				padding-right: @ts-unit-double;
+			}
 		}
 	}
 
